jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


typedef struct
{
	char Numero[14];
	int COO_Cupom;
	int COO_Dav;
	char Titulo[31];
	double Valor;
	double DtEmissao;
} DAVsRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;



// Funções

DllImport int ECF_AbreCupom(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco, const BOOL ModoPreVenda);

DllImport int ECF_ArquivoMFD_DLL(const INTPTR ecfHandle, const double DaTaInicial, const double DaTaFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC, const int Finalidade);

DllImport int ECF_ArquivoMFD_DLL_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC, const int Finalidade, const int TipoContador);

DllImport int ECF_CancelaCupom(const INTPTR ecfHandle);

DllImport int ECF_CancelaDescontoAcrescimoItem(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaDescontoAcrescimoSubTotal(const INTPTR ecfHandle, const char tipoAcrescimoDesconto);

DllImport int ECF_CancelaItemVendido(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaItemVendidoParcial(const INTPTR ecfHandle, const int numItem, const double quantidade);

DllImport int ECF_ConfigBarras_GetAltura(const INTPTR ecfHandle, int* value);

DllImport int ECF_ConfigBarras_GetLarguraLinha(const INTPTR ecfHandle, int* value);

DllImport int ECF_ConfigBarras_GetMostrarCodigo(const INTPTR ecfHandle);

DllImport int ECF_ConfigBarras_SetAltura(const INTPTR ecfHandle, const int value);

DllImport int ECF_ConfigBarras_SetLarguraLinha(const INTPTR ecfHandle, const int value);

DllImport int ECF_ConfigBarras_SetMostrarCodigo(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_Consumidor_AtribuiConsumidor(const INTPTR ecfHandle, const PCHAR CPF_CNPJ, const PCHAR Nome, const PCHAR Endereco);

DllImport int ECF_Consumidor_GetAtribuido(const INTPTR ecfHandle);

DllImport int ECF_Consumidor_GetDocumento(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_GetEndereco(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_GetEnviado(const INTPTR ecfHandle);

DllImport int ECF_Consumidor_GetNome(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_SetEnviado(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_Consumidor_Zera(const INTPTR ecfHandle);

DllImport int ECF_DAV_Abrir(const INTPTR ecfHandle, const double emissao, const PCHAR decrdocumento, const PCHAR numero, const PCHAR situacao, const PCHAR vendedor, const PCHAR observacao, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco, const int indice);

DllImport int ECF_DAV_Fechar(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_DAV_RegistrarItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR unidade, const double quantidade, const double vlrunitario, const double desconto, const double acrescimo, const BOOL cancelado);

DllImport int ECF_DescontoAcrescimoItemAnterior(const INTPTR ecfHandle, const double valorDescontoAcrescimo, const PCHAR descontoAcrescimo, const PCHAR TipoDescontoAcrescimo, const int Item);

DllImport int ECF_DoAtualizarValorGT(const INTPTR ecfHandle);

DllImport int ECF_EfetuaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EspelhoMFD_DLL(const INTPTR ecfHandle, const double DaTaInicial, const double DaTaFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC);

DllImport int ECF_EspelhoMFD_DLL_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC);

DllImport int ECF_EstornaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagtoEstornar, const PCHAR codFormaPagtoEfetivar, const double valor, const PCHAR observacao);

DllImport int ECF_FechaCupom(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_IdentificaConsumidor(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_InfoRodapeCupom_GetCupomMania(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_GetDav(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_GetDavOs(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_GetMD5(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_GetMinasLegal(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_GetParaibaLegal(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_GetPreVenda(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_GetImprimir(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_GetProgramaDeCredito(const INTPTR ecfHandle);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_GetValorICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_GetValorISS(const INTPTR ecfHandle, double* value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_SetImprimir(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_SetProgramaDeCredito(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_SetValorICMS(const INTPTR ecfHandle, const double value);

DllImport int ECF_InfoRodapeCupom_NotaLegalDF_SetValorISS(const INTPTR ecfHandle, const double value);

DllImport int ECF_InfoRodapeCupom_SetCupomMania(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_SetDav(const INTPTR ecfHandle, const PCHAR value);

DllImport int ECF_InfoRodapeCupom_SetDavOs(const INTPTR ecfHandle, const PCHAR value);

DllImport int ECF_InfoRodapeCupom_SetMD5(const INTPTR ecfHandle, const PCHAR value);

DllImport int ECF_InfoRodapeCupom_SetMinasLegal(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_SetParaibaLegal(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_InfoRodapeCupom_SetPreVenda(const INTPTR ecfHandle, const PCHAR value);

DllImport int ECF_LegendaInmetroProximoItem(const INTPTR ecfHandle);

DllImport int ECF_PafMF_GerarCAT52(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LX_Impressao(const INTPTR ecfHandle);

DllImport int ECF_PafMF_RelDAVEmitidos(const INTPTR ecfHandle, const DAVsRec DAVs[], const int index, const PCHAR TituloRelatorio, const int IndiceRelatorio);

DllImport int ECF_PafMF_RelIdentificacaoPafECF(const INTPTR ecfHandle, const INTPTR aacHandle, const int IndiceRelatorio);

DllImport int ECF_PafMF_RelMeiosPagamento(const INTPTR ecfHandle, const FormaPagamentoRec formasPagamento[], const int count, const PCHAR TituloRelatorio, const int IndiceRelatorio);

DllImport int ECF_PafMF_RelParametrosConfiguracao(const INTPTR ecfHandle, const INTPTR aacHandle, const int IndiceRelatorio);

DllImport int ECF_SetPausaRelatorio(const INTPTR ecfHandle, const int pausa);

DllImport int ECF_SubtotalizaCupom(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_VendeItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR aliquotaICMS, const double qtd, const double valorUnitario, const double descontoPorc, const PCHAR unidade, const PCHAR tipoDescontoAcrescimo, const PCHAR descontoAcrescimo, const int CodDepartamento);